# rusty-film

./: Cargo.toml  LICENSE  README.md
src/: image.rs  import.rs  io.rs  main.rs  metadata.rs
src/metadata/: xmp.rs
