[package]
name = "rusty-film"
description = "An opinionated filesystem-based photo management tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
chrono = "0.4.37"
clap = { version = "4.5.4", features = ["derive"] }
crc32c = "0.6.5"
crc32fast = "1.4.0"
enum_dispatch = "0.3.13"
glob = "0.3.1"
indicatif = { version = "0.17.8", features = ["tokio"] }
rexiv2 = "0.10.0"
