[package]
name = "rusty-film"
description = "An opinionated filesystem-based photo management tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
bincode = "1.3.3"
chrono = { version = "0.4.37", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
crc32c = "0.6.5"
crc32fast = "1.4.0"
directories = "5.0.1"
enum_dispatch = "0.3.13"
env_logger = "0.11.3"
glob = "0.3.1"
indicatif = { version = "0.17.8", features = ["tokio"] }
indicatif-log-bridge = "0.2.2"
linkme = "0.3.25"
log = "0.4.21"
memmap2 = { version = "0.9.4", optional = true }
persy = "1.5.0"
rexiv2 = "0.10.0"
serde = { version = "1.0.197", features = ["derive"] }
tracing = { version = "0.1.40", optional = true }
tracing-subscriber = { version = "0.3.18", optional = true }
tracing-tracy = { version = "0.11.0", optional = true }

[features]
tracing = ["dep:tracing", "dep:tracing-tracy", "dep:tracing-subscriber"]
memmap2 = ["dep:memmap2"]

[profile.release]
# Enable link-time optimization, eliminates more code and inlines across crate boundaries.
# Default: false
lto = true

# codegen-units of 1 gives best optimization, but disables parallel building.
# Default: 16
codegen-units = 1

# Includes debug information in release builds. Necessary for profiling. Does not
# slow down the executable.
debug = true

# The default optimization level is 3 for release mode builds.
# 0 means disable optimization and is the default for debug mode buids.
# (Setting opt-level=1 for debug builds is a good way of speeding them up a bit.)
# "s" means optimize for size, "z" reduces size even more.
opt-level = 3

